Updates to VIIRS access to log processed granules

--- a/Aim2/code/Python/00nifc-fire-perimeters.ipynb
+++ b/Aim2/code/Python/00nifc-fire-perimeters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "b0687419-4278-4604-8efa-b9c34a68d9fe",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,7 @@
     "import os, sys, time, gc\n",
     "import geopandas as gpd\n",
     "import rioxarray as rxr\n",
+    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "1059a21f-5055-4ed7-87dc-89bb7f302f7b",
    "metadata": {},
    "outputs": [
@@ -81,7 +82,7 @@
        "Index(['na_l3name', 'geometry'], dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "25843395-76d2-471d-83d9-dbd3b0f86867",
    "metadata": {},
    "outputs": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a7b7ca4c-53d4-44a7-9209-34c77322f7c8",
    "metadata": {},
    "outputs": [
@@ -262,7 +263,7 @@
        "4  MULTIPOLYGON (((-1032962.010 1673014.612, -103...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1b75538e-1cbe-4c24-99bb-566f82d24785",
    "metadata": {},
    "outputs": [
@@ -294,7 +295,7 @@
        "Name: GIS_ACRES, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "3dcab74c-d7b8-40ba-ab72-7c04672ddefe",
    "metadata": {},
    "outputs": [
@@ -326,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "3bddb666-0a19-43bc-b46f-5ae64406bee4",
    "metadata": {},
    "outputs": [
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "deffeb8b-2fa1-440d-9a77-1e31b9b23a9c",
    "metadata": {},
    "outputs": [
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "46be3b0b-bb41-4bef-ac7c-2792864c291b",
    "metadata": {},
    "outputs": [
@@ -398,7 +399,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0a6a43d8-ab04-42b6-8b3c-b34a3d3ea3fb",
    "metadata": {},
    "outputs": [],
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "99aa7830-60fd-4670-be8f-4baf0c4d527d",
    "metadata": {},
    "outputs": [
@@ -470,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "a9a73c1d-c3ca-4136-90d1-6ac01223c6b4",
    "metadata": {},
    "outputs": [
@@ -500,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b5f8d55a-2fe2-4204-83fd-16479fb6d2ce",
    "metadata": {},
    "outputs": [],
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "292c6ad1-a899-4d6c-bba7-34e1aa7841a6",
    "metadata": {},
    "outputs": [
@@ -536,10 +537,10 @@
     {
      "data": {
       "text/plain": [
-       "633"
+       "54"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,17 +562,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "34e8c970-0857-4f05-b776-741f7126e2b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "66"
+       "54"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "5ecd87d4-8d37-404f-97ce-34420560171c",
    "metadata": {},
    "outputs": [
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "230b606f-68b6-4432-8534-f8d8888ab530",
    "metadata": {},
    "outputs": [],
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "24f98d08-b914-4db9-8cdd-1aff41a76cd4",
    "metadata": {},
    "outputs": [
@@ -639,7 +640,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total elapsed time: 1.19 minutes.\n",
+      "Total elapsed time: 1.49 minutes.\n",
       "\n",
       "~~~~~~~~~~\n",
       "\n"
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "a9e6ddb5-5ab0-4766-af9d-2d73f46ff1d3",
    "metadata": {},
    "outputs": [
@@ -790,7 +791,7 @@
        "9         8  7016    5.0         789.0   0.633714"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,17 +810,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "1d659cea-cd9d-4487-96a2-2eb9b6b325c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "758"
+       "750"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "559df152-6b70-4f35-b1f4-e00dd4fa650a",
    "metadata": {},
    "outputs": [],
@@ -849,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "ddf3a7e2-7037-4bdc-b0e3-05a6bee8523f",
    "metadata": {},
    "outputs": [
@@ -862,7 +863,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "acc9ed08-4fce-4066-b691-317e245d3683",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1006,7 @@
        "4                     Spruce-Fir Forest and Woodland  Closed tree canopy  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "2976134e-eb8f-4156-b797-5f131f7194eb",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "3c22c557-02e5-43c4-b0b1-ce13754023c8",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "23a5b1da-9e59-498e-a51a-3cbae2c75e3f",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "32a9f333-ff5e-40ce-9710-9b7eabf561a3",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "4d96e31c-d675-423a-8575-04c06c9317b3",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1126,7 @@
        "0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "5c68bc96-d38d-46d7-a148-544a1600446b",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "d09c7e79-663d-479a-89e4-adab2b442da3",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1177,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "d00a4d7d-3f04-42e4-ab88-faad370c1d64",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "791d2bd5-3637-4398-b363-1f2e176497d1",
    "metadata": {},
    "outputs": [
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "id": "3a959c27-e72d-41eb-91a4-43a372e29447",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1343,7 @@
        "282     41932      2018           Ryan   28243.65  10.758135"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "id": "9303c890-f528-4631-906f-44e70a535351",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "54f216d5-c1f4-4028-9e67-b217b5a8c9c5",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bc3fa43b-e5ec-4646-8845-181bca269a2e",
    "metadata": {},
    "outputs": [],
@@ -1437,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "id": "c8cc0e06-2b6e-48d7-bdc9-1eaba7042674",
    "metadata": {},
    "outputs": [
@@ -1509,21 +1510,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "72a473e8-a06a-4bb1-b560-d45a1914a126",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gc.collect()"
    ]
