--- a/Aim2/code/Python/XXviirs_access-swath.ipynb
+++ b/Aim2/code/Python/XXviirs_access-swath.ipynb
@@ -18,13 +18,13 @@
     "\"\"\"\n",
     "Downloading VIIRS Active Fire Detections (AFD) with 'earthaccess' python API\n",
     "\n",
-    "For a given geometry (in this case, fire perimeters), download data granules for:\n",
+    "Searches and accesses VIIRS AFD for fire perimeters.\n",
     "\n",
     "VIIRS/NPP Active Fires 6-Min L2 Swath 375m V002 (VNP14IMG)\n",
     "VIIRS/NPP Imagery Resolution Terrain Corrected Geolocation 6-Min L1 Swath 375 m (VNP03IMG)\n",
     "\n",
     "Return: \n",
-    "    - Downloaded NetCDF granules for the above products\n",
+    "    - Downloaded/cloud access NetCDF granules for the above products\n",
     "    - GeoDataFrame representing active fire pixel locations and attributes (before geolocation)\n",
     "    - Geolocation grid representing pixel locations and overlap of adjacent orbits\n",
     "\n",
