Update to GEE exports

--- a/Aim2/code/Python/03afd-severity_CBI.ipynb
+++ b/Aim2/code/Python/03afd-severity_CBI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e8875da6-de28-494e-8590-5deff24c959f",
    "metadata": {},
    "outputs": [
@@ -11,6 +11,13 @@
      "output_type": "stream",
      "text": [
       "Success\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "*** Earth Engine *** Share your feedback by taking our Annual Developer Satisfaction Survey: https://google.qualtrics.com/jfe/form/SV_0JLhFqfSY1uiEaW?source=Init\n"
      ]
     }
    ],
@@ -159,13 +166,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['fid', 'FRP', 'NIFC_NAME', 'LONGITUDE', 'ACQ_YEAR', 'ACQ_TIME', 'SCAN', 'BRIGHTNESS', 'CONFIDENCE', 'TYPE', 'SATELLITE', 'na_l3name', 'DAYNIGHT', 'TRACK', 'INSTRUMENT', 'VID', 'NIFC_ID', 'START_YEAR', 'ACQ_DATETI', 'ACQ_MONTH', 'WF_CESSATI', 'VERSION', 'BRIGHT_T31', 'DISCOVERY_', 'afdID', 'LATITUDE', 'system:index', 'ACQ_DATE']\n"
+      "['Fire_ID', 'acq_date', 'daynight', 'Ig_Date', 'Last_Date', 'afdID', 'system:index']\n"
      ]
     }
    ],
    "source": [
     "# Load the FRP observations\n",
-    "afd = ee.FeatureCollection('projects/jfsp-aspen/assets/AFD/combined-afd_aspen-fires_2018_to_2023')\n",
+    "afd = ee.FeatureCollection('projects/jfsp-aspen/assets/AFD/vnp14img_geo_srm_pix_area_aspenfires')\n",
     "print(afd.first().propertyNames().getInfo())"
    ]
   },
@@ -440,22 +447,19 @@
       "Export to Earth Engine Asset started!\n",
       "Waiting for export to finish..\n",
       "\tPatience young padawan.\n",
-      "Waiting for export to finish..\n",
-      "\tPatience young padawan.\n",
       "Export completed successfully !!!!\n"
      ]
     }
    ],
    "source": [
     "# Export table to Drive.\n",
-    "\n",
     "cbi_stats = cbi_stats.map(lambda feature: feature.setGeometry(None)) # drop geometry column\n",
     "\n",
     "export_task = ee.batch.Export.table.toDrive(\n",
     "    collection=cbi_stats,\n",
-    "    description='afd_aspen-fires_cbi-stats',\n",
+    "    description='vnp14img_geo_srm_pix_area_aspenfires_cbi-stats',\n",
     "    fileFormat='CSV', \n",
-    "    fileNamePrefix='afd_aspen-fires_cbi-stats',\n",
+    "    fileNamePrefix='vnp14img_geo_srm_pix_area_aspenfires_cbi-stats',\n",
     "    folder='CBI'\n",
     ")\n",
     "\n",
