--- a/Aim2/code/Python/05a_afd-s2-composites.ipynb
+++ b/Aim2/code/Python/05a_afd-s2-composites.ipynb
@@ -16,9 +16,8 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Extract attributes from Google Earth Engine (GEE)\n",
-    "\n",
-    "maxwell.cook@colorado.edu\n",
+    "Creating Sentinel-2 cloud-free composites for pre-fire fuel conditions in Google Earth Engine (GEE)\n",
+    "Author: maxwell.cook@colorado.edu\n",
     "\"\"\"\n",
     "\n",
     "import ee\n",
