--- a/Aim2/code/Python/XXviirs-afd-processing.ipynb
+++ b/Aim2/code/Python/XXviirs-afd-processing.ipynb
@@ -184,6 +184,7 @@
     "fp = os.path.join(datamod,'vnp14img_geo_aspen-fires-srm_2018to2023.csv')\n",
     "afds = pd.read_csv(fp).reset_index(drop=True)\n",
     "afds = afds.loc[:, ~afds.columns.str.startswith('Unnamed:')]\n",
+    "afds['acq_date'] = afds['acq_date'].dt.date # convert to simple date format\n",
     "len(afds)"
    ]
   },
@@ -1202,7 +1203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
+   "id": "373a8aef-01f2-41a9-b36b-39783bf1b200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped [4079] low-confidence obs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop low confidence\n",
+    "afds_ll_pix_c1_ = afds_ll_pix_c1[afds_ll_pix_c1['confidence'] != 'l']\n",
+    "print(f\"Dropped [{len(afds_ll_pix_c1)-len(afds_ll_pix_c1_)}] low-confidence obs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "6a01fbb0-4a2e-4164-a0f6-bee2e5e01a4c",
    "metadata": {},
    "outputs": [
@@ -1210,24 +1231,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved to:/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/vnp14img_geo_srm_pix_area_aspenfires_nodup.gpkg\n"
+      "Saved to:/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/vnp14img_geo_srm_pix_area_aspenfires_.gpkg\n"
      ]
     }
    ],
    "source": [
     "# save this file out.\n",
-    "out_fp = os.path.join(datamod, 'vnp14img_geo_srm_pix_area_aspenfires_nodup.gpkg')\n",
-    "afds_ll_pix_c1.to_file(out_fp)\n",
+    "out_fp = os.path.join(datamod, 'vnp14img_geo_srm_pix_area_aspenfires_.gpkg')\n",
+    "afds_ll_pix_c1_.to_file(out_fp)\n",
     "print(f\"Saved to:{out_fp}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ea4049-ffa7-48cc-b4e5-834b9ba030e4",
+   "id": "4c17e17e-22e3-41d7-a516-b6d4d48f8ae8",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b4ea4049-ffa7-48cc-b4e5-834b9ba030e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "afdID           int64\n",
+      "acq_date       object\n",
+      "daynight       object\n",
+      "Fire_ID        object\n",
+      "Ig_Date        object\n",
+      "Last_Date      object\n",
+      "geometry     geometry\n",
+      "dtype: object\n",
+      "Saved to:/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/earth-engine/imports/vnp14img_geo_srm_pix_area_aspenfires.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save a version for GEE\n",
+    "\n",
+    "afds_ll_pix_c1_gee = afds_ll_pix_c1.copy()\n",
+    "\n",
+    "afds_ll_pix_c1_gee.rename(columns={'DISCOVERY_DATE': 'Ig_Date', 'WF_CESSATION_DATE': 'Last_Date'}, inplace=True)\n",
+    "afds_ll_pix_c1_gee = afds_ll_pix_c1_[['afdID','acq_date','daynight','Fire_ID','Ig_Date','Last_Date','geometry']]\n",
+    "afds_ll_pix_c1_gee['acq_date'] = afds_ll_pix_c1_gee['acq_date'].dt.date.astype(str)\n",
+    "afds_ll_pix_c1_gee['Ig_Date'] = afds_ll_pix_c1_gee['Ig_Date'].dt.date.astype(str)\n",
+    "afds_ll_pix_c1_gee['Last_Date'] = afds_ll_pix_c1_gee['Last_Date'].dt.date.astype(str)\n",
+    "\n",
+    "print(afds_ll_pix_c1_gee.dtypes)\n",
+    "\n",
+    "out_fp = os.path.join(projdir, 'data/earth-engine/imports/vnp14img_geo_srm_pix_area_aspenfires.shp')\n",
+    "afds_ll_pix_c1_gee.to_file(out_fp)\n",
+    "print(f\"Saved to:{out_fp}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1240,30 +1301,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca1150dd-3e92-4e11-8842-29d029265873",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8114abf-9159-4824-9a28-fada4ef9c5ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9cd425-43a4-44e1-bfdd-9128220919f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b21e6a2a-efb0-445d-bbda-34334d4424df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, obs in afds_ll_pix.iterrows():\n",
-    "    afdID = obs['afdID'] # grab the current ID\n",
-    "    # identify other observations of the same datetime\n",
-    "    date_matches = afds_ll_pix[\n",
-    "        (afds_ll_pix['acq_datetime'] == obs['acq_datetime']) &\n",
-    "        (afds_ll_pix.afdID != afdID)\n",
-    "    ]\n",
-    "    if len(date_matches) > 0:\n",
-    "        for match_idx, match_obs in date_matches.iterrows():\n",
-    "            match_afdID = match_obs['afdID']\n",
-    "            # Calculate overlap\n",
-    "            overlap_area = obs.geometry.intersection(match_obs.geometry).area\n",
-    "            ratio = overlap_area / obs.geometry.area\n",
-    "            # Check for spatial overlap\n",
-    "            if ratio > overlap_threshold:\n",
-    "                # Keep the one with higher FRP, mark lower FRP for removal\n",
-    "                if match_obs['frp'] < obs['frp']:\n",
-    "                    drop_obs.add(match_afdID)\n",
-    "    else:\n",
-    "        continue\n"
+    "# for idx, obs in afds_ll_pix.iterrows():\n",
+    "#     afdID = obs['afdID'] # grab the current ID\n",
+    "#     # identify other observations of the same datetime\n",
+    "#     date_matches = afds_ll_pix[\n",
+    "#         (afds_ll_pix['acq_datetime'] == obs['acq_datetime']) &\n",
+    "#         (afds_ll_pix.afdID != afdID)\n",
+    "#     ]\n",
+    "#     if len(date_matches) > 0:\n",
+    "#         for match_idx, match_obs in date_matches.iterrows():\n",
+    "#             match_afdID = match_obs['afdID']\n",
+    "#             # Calculate overlap\n",
+    "#             overlap_area = obs.geometry.intersection(match_obs.geometry).area\n",
+    "#             ratio = overlap_area / obs.geometry.area\n",
+    "#             # Check for spatial overlap\n",
+    "#             if ratio > overlap_threshold:\n",
+    "#                 # Keep the one with higher FRP, mark lower FRP for removal\n",
+    "#                 if match_obs['frp'] < obs['frp']:\n",
+    "#                     drop_obs.add(match_afdID)\n",
+    "#     else:\n",
+    "#         continue\n"
    ]
   },
   {
