update to gridmet summary

--- a/Aim2/code/Python/XXviirs-afd-processing.ipynb
+++ b/Aim2/code/Python/XXviirs-afd-processing.ipynb
@@ -1292,11 +1292,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "83e84d72-4f43-4510-845d-ea8a8d205296",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Fire_ID       Fire_Name Fire_Year     Ig_Date   Last_Date  \\\n",
+      "2      14             416      2018  2018-06-01  2018-07-03   \n",
+      "4      24         PLATEAU      2018  2018-07-22  2018-08-17   \n",
+      "5      26         PLUMTAW      2022  2022-05-17  2022-05-18   \n",
+      "6      33      DOE CANYON      2019  2019-06-20  2019-07-03   \n",
+      "7      43  CHRIS MOUNTAIN      2023  2023-06-28  2023-07-04   \n",
+      "\n",
+      "                                            geometry  \n",
+      "2  POLYGON ((-1049979.478 1675062.140, -1049943.6...  \n",
+      "4  POLYGON ((-1097425.258 1687412.458, -1097411.7...  \n",
+      "5  POLYGON ((-972808.959 1648515.784, -972812.086...  \n",
+      "6  POLYGON ((-1107281.763 1705185.622, -1107310.1...  \n",
+      "7  POLYGON ((-987311.103 1642200.746, -987297.034...  \n",
+      "\n",
+      "Saved to:/Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/earth-engine/imports/nifc_aspenfires_2018to2023.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "# also save a fire perimeter dataset for GEE\n",
+    "fires_ = fires[fires['Fire_ID'].isin(afds_ll_pix_c1_['Fire_ID'])]\n",
+    "fires_ = fires_[['Fire_ID','Fire_Name','START_YEAR','DISCOVERY_DATE','WF_CESSATION_DATE','geometry']]\n",
+    "fires_.rename(columns={'START_YEAR': 'Fire_Year', 'DISCOVERY_DATE': 'Ig_Date', 'WF_CESSATION_DATE': 'Last_Date'}, inplace=True)\n",
+    "fires_['Ig_Date'] = fires_['Ig_Date'].dt.date.astype(str)\n",
+    "fires_['Last_Date'] = fires_['Last_Date'].dt.date.astype(str)\n",
+    "\n",
+    "out_fp = os.path.join(projdir, 'data/earth-engine/imports/nifc_aspenfires_2018to2023.shp')\n",
+    "fires_.to_file(out_fp)\n",
+    "\n",
+    "print(fires_.head())\n",
+    "\n",
+    "print(f\"\\nSaved to:{out_fp}\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1310,6 +1346,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f8114abf-9159-4824-9a28-fada4ef9c5ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "485a083d-0154-458f-bda0-083b8cdefc3b",
    "metadata": {},
    "outputs": [],
    "source": []
